@startuml

title __TASKSTHREADS's Class Diagram__\n

  namespace TasksThreads {
    class TasksThreads.DisplayThread {
        {static} + REFRESH_DELAY : int
        ~ imBG : Image
        ~ imBigPoint : Image
        ~ imEmpty : Image
        ~ imGhost : Image
        ~ imHeart : Image
        ~ imPM : Image
        ~ imPoint : Image
        ~ imStrong : Image
        ~ imUntouchable : Image
        ~ imWall : Image
        - firstInstance : boolean
        - lifeTab : ImageView[]
        - running : AtomicBoolean
        - tab : ImageView[][]
        + DisplayThread()
        + call()
        + stopThread()
    }
  }
  

  namespace TasksThreads {
    class TasksThreads.EndOfGameTask {
        {static} - LOSE_TEXT : String
        {static} - VICTORY_TEXT : String
        - running : AtomicBoolean
        + EndOfGameTask()
        + reset()
        + stopRunning()
        # call()
    }
  }
  

  namespace TasksThreads {
    class TasksThreads.LivesTask {
        - running : AtomicBoolean
        + LivesTask()
        + setPacman()
        + stopRunning()
        # call()
    }
  }
  

  TasksThreads.DisplayThread -up-|> javafx.concurrent.Task
  TasksThreads.DisplayThread o-- Modele.ModelGrid : modelGrid
  TasksThreads.EndOfGameTask -up-|> javafx.concurrent.Task
  TasksThreads.EndOfGameTask o-- Modele.ThreadController : controller
  TasksThreads.EndOfGameTask o-- Modele.ModelGrid : modelGrid
  TasksThreads.LivesTask -up-|> javafx.concurrent.Task
  TasksThreads.LivesTask o-- Modele.SimplePacMan : simplePacMan


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
